@@ -277,12 +277,33 @@ Beep when a balance of the currently selected wallet has changed.
 <td> "/Gocoin:<i>?.?.?</i>/"</td>
 <td class="cfg_info"> Which string shall be reported by the node as User-Agent (in the version messages).</td>
 </tr>
+
 <tr>
 <td class="cfg_name"> AllBalances.MinValue</td>
 <td class="cfg_type"> uint</td>
 <td> 10000</td>
 <td class="cfg_info"> The addresses balance database does not include inputs carrying value lover than this many Satoshis.</td>
 </tr>
+
+<tr>
+<td class="cfg_name"> DropPeers.DropEachMinutes</td>
+<td class="cfg_type"> uint</td>
+<td> 5</td>
+<td class="cfg_info"> How many minutes between disconnecting the slowest peers. 0 - never drop peers.</td>
+</tr>
+<tr>
+<td class="cfg_name"> DropPeers.BlckExpireHours</td>
+<td class="cfg_type"> uint</td>
+<td> 48</td>
+<td class="cfg_info"> How many hours before blocks received from a peer "expire",  in slowest peer calculation.</td>
+</tr>
+<tr>
+<td class="cfg_name"> DropPeers.PingPeriodSec</td>
+<td class="cfg_type"> uint</td>
+<td> 15</td>
+<td class="cfg_info"> How many seconds between sending ping comand to a peer. 0 - do not ping.</td>
+</tr>
+
 </tbody>
 </table>
 <br>
